// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Design System/Core/Badge Default smoke-test 1`] = `
<div class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-primary text-primary-foreground shadow hover:bg-primary/80">
  Badge
</div>
`;

exports[`Design System/Core/Badge Destructive smoke-test 1`] = `
<div class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-destructive text-destructive-foreground shadow hover:bg-destructive/80">
  Badge
</div>
`;

exports[`Design System/Core/Badge Outline smoke-test 1`] = `
<div class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 text-foreground">
  Badge
</div>
`;

exports[`Design System/Core/Badge Secondary smoke-test 1`] = `
<div class="inline-flex items-center rounded-md border px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-transparent bg-secondary text-secondary-foreground hover:bg-secondary/80">
  Badge
</div>
`;
